--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "url": "https://github.com/yoshi415/minimalStockTicker/issues"
   },
   "homepage": "https://github.com/yoshi415/minimalStockTicker#readme",
-    "devDependencies": {
+  "devDependencies": {
+    "babel": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-cssnano": "^2.1.0",
-    "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
@@ -28,7 +29,6 @@
     "jshint": "^2.9.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0",
-    "yargs": "^3.32.0"
+    "watchify": "^3.7.0"
   }
 }
