--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "homepage": "https://github.com/yoshi415/minimalStockTicker#readme",
   "devDependencies": {
     "babel": "^6.5.1",
+    "babel-core": "^6.5.1",
+    "babel-preset-stage-3": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
@@ -30,5 +33,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.5.0"
   }
 }
