[Feat] Adding and removing symbols to list working

--- a/plugin/extension/manifest.json
+++ b/plugin/extension/manifest.json
@@ -16,7 +16,7 @@
   },
 
   "permissions": [
-    "https://finance.yahoo.com/**/*"
+    "https://finance.yahoo.com/**/*", "storage"
   ],
 
   "background": {
