--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.5.0"
+    "babel-polyfill": "^6.5.0",
+    "gulp-scss": "^1.3.17"
   }
 }
