--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
-    "gulp-scss": "^1.3.17"
+    "gulp-if": "^2.0.0",
+    "gulp-scss": "^1.3.17",
+    "yargs": "^4.1.0"
   }
 }
