--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "jshint": "^2.9.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "gulp-scss": "^1.3.17"
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
-    "gulp-scss": "^1.3.17"
   }
 }
