--- a/plugin/extension/manifest.json
+++ b/plugin/extension/manifest.json
@@ -31,5 +31,9 @@
       "all_frames": true,
       "match_about_blank": true
     }
+  ],
+
+  "web_accessible_resources": [
+        "stockTicker.html"
   ]
 }
