--- a/plugin/extension/manifest.json
+++ b/plugin/extension/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
   "author": "Yoshio Varney & Ryan Jones",
-  "name": "Minimal Stock Ticker",
-  "description": "Chrome extension providing minimal, unobtrusive stock ticker",
-  "version": "0.1",
+  "name": "Non-Distracting Stock Price Updates",
+  "description": "Stock Price and Percentage Change Updates That Are NOT Distracting",
+  "version": "0.3",
   "icons": {
     "16": "assets/images/ticker16.png",
     "48": "assets/images/ticker48.png"
